--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -6,3 +6,9 @@
 === User 생성
 
 operation::user-signup[snippets='http-request,http-response,request-fields']
+
+== Activity
+
+=== 전체 Activity 목록
+
+operation::activity-list[snippets='http-request,response-fields,http-response']
