--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -16,3 +16,7 @@ operation::activity-list[snippets='http-request,response-fields,http-response']
 === 스피드게임 만들기
 
 operation::speedgame-create[snippets='request-headers,http-request,request-fields,response-fields,http-response']
+
+=== 스피드게임 방 조회
+
+operation::speedgame-get-info[snippets='path-parameters,http-request,response-fields,http-response']
